remove horizontal scroll & fix text in section & fix path to img

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,3 +8,11 @@ body{
     background-color: #F8F7FC;
 
 }
+
+html, body {
+    overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
